--- a/src/main/resources/truck/truckmanagement/Trip-view.fxml
+++ b/src/main/resources/truck/truckmanagement/Trip-view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.Button?>
 <AnchorPane prefHeight="478.0" prefWidth="718.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.TripWindow">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Paskirties vieta">
@@ -86,5 +87,6 @@
             <Font size="14.0" />
          </font>
       </Label>
+      <Button fx:id="finishTripButtonId" layoutX="13.0" layoutY="421.0" mnemonicParsing="false" onAction="#finishTrip" prefHeight="35.0" prefWidth="117.0" text="Užbaigti reisą" />
    </children>
 </AnchorPane>
