--- a/src/main/resources/truck/truckmanagement/Trip-view.fxml
+++ b/src/main/resources/truck/truckmanagement/Trip-view.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Button?>
 <AnchorPane prefHeight="478.0" prefWidth="718.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.TripWindow">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Paskirties vieta">
@@ -86,5 +88,12 @@
             <Font size="14.0" />
          </font>
       </Label>
+      <ListView fx:id="truckStopsListView" layoutX="444.0" layoutY="49.0" prefHeight="378.0" prefWidth="259.0" />
+      <Label layoutX="444.0" layoutY="14.0" text="Sustojimai">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button layoutX="444.0" layoutY="439.0" mnemonicParsing="false" onAction="#addTruckStop" text="Pridėti naują" />
    </children>
 </AnchorPane>
