--- a/src/main/resources/truck/truckmanagement/MainWindowManager-view.fxml
+++ b/src/main/resources/truck/truckmanagement/MainWindowManager-view.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.PasswordField?>
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="345.0" prefWidth="670.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.MainWindowManager">
   <tabs>
     <Tab text="Reisai">
@@ -137,7 +138,7 @@
                       <Text layoutX="14.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pavardė" />
                       <TextField fx:id="fieldEmail" layoutX="203.0" layoutY="32.0" />
                       <Text layoutX="203.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Paštas" />
-                      <TextField fx:id="fieldPassword" layoutX="203.0" layoutY="82.0" />
+                      <PasswordField fx:id="fieldPassword" layoutX="203.0" layoutY="82.0" />
                       <Text layoutX="203.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Slaptažodis" />
                       <TextField fx:id="fieldPhone" layoutX="203.0" layoutY="134.0" />
                       <Text layoutX="203.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Telefono numeris" />
