added rest of the tests, selected views elements updated with id's in order to run tests

--- a/src/main/resources/truck/truckmanagement/MainWindowDriver-view.fxml
+++ b/src/main/resources/truck/truckmanagement/MainWindowDriver-view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.control.CheckBox?>
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="355.0" prefWidth="556.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.MainWindowDriver">
   <tabs>
-    <Tab text="Reisai">
+    <Tab fx:id="Reisai" text="Reisai">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="434.0" prefWidth="556.0">
                <children>
@@ -24,7 +24,7 @@
                         <Font size="25.0" />
                      </font>
                   </Text>
-                  <Button layoutX="472.0" layoutY="15.0" mnemonicParsing="false" onAction="#viewTrip" prefHeight="30.0" prefWidth="68.0" text="Peržiūrėti" />
+                  <Button fx:id="viewTripButton" layoutX="472.0" layoutY="15.0" mnemonicParsing="false" onAction="#viewTrip" prefHeight="30.0" prefWidth="68.0" text="Peržiūrėti" />
                    <CheckBox fx:id="finishedTrips" layoutX="16.0" layoutY="40.0" mnemonicParsing="false" onAction="#applyFilterOnTripsList" text="Rodyti pasibaigusius taip pat" />
                </children></AnchorPane>
       </content>
