--- a/src/main/resources/truck/truckmanagement/Trip-view.fxml
+++ b/src/main/resources/truck/truckmanagement/Trip-view.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Button?>
-<AnchorPane prefHeight="478.0" prefWidth="718.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.TripWindow">
+
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+
+<AnchorPane fx:id="tripViewWindow" prefHeight="478.0" prefWidth="718.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.TripWindow">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Paskirties vieta">
          <font>
