--- a/src/main/resources/truck/truckmanagement/MainWindowDriver-view.fxml
+++ b/src/main/resources/truck/truckmanagement/MainWindowDriver-view.fxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.CheckBox?>
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="355.0" prefWidth="556.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.MainWindowDriver">
   <tabs>
     <Tab fx:id="Reisai" text="Reisai">
@@ -29,7 +29,7 @@
                </children></AnchorPane>
       </content>
     </Tab>
-      <Tab text="Forumas">
+      <Tab fx:id="ForumasId" text="Forumas">
           <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
@@ -39,7 +39,7 @@
                               <Font size="24.0" />
                           </font>
                       </Text>
-                      <Button layoutX="383.0" layoutY="34.0" mnemonicParsing="false" onAction="#readForumTopic" prefHeight="32.0" prefWidth="71.0" text="Peržiūrėti" />
+                      <Button fx:id="readForumTopicId" layoutX="383.0" layoutY="34.0" mnemonicParsing="false" onAction="#readForumTopic" prefHeight="32.0" prefWidth="71.0" text="Peržiūrėti" />
                       <Button layoutX="383.0" layoutY="78.0" mnemonicParsing="false" onAction="#createForumTopic" prefHeight="32.0" prefWidth="71.0" text="Sukurti" />
                   </children>
               </AnchorPane>
