--- a/src/main/resources/truck/truckmanagement/Freight-view.fxml
+++ b/src/main/resources/truck/truckmanagement/Freight-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="386.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.FreightWindow">
+<AnchorPane fx:id="freightViewWindow" prefHeight="386.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.FreightWindow">
    <children>
       <Label fx:id="headerText" layoutX="146.0" layoutY="14.0" text="Krovinio peržiūra">
          <font>
