--- a/src/main/resources/truck/truckmanagement/MainWindowAdmin-view.fxml
+++ b/src/main/resources/truck/truckmanagement/MainWindowAdmin-view.fxml
@@ -61,7 +61,7 @@
                </children></AnchorPane>
       </content>
     </Tab>
-      <Tab text="Krovinių valdymas">
+      <Tab fx:id="Freights"  text="Krovinių valdymas">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
