--- a/src/main/resources/truck/truckmanagement/MainWindowManager-view.fxml
+++ b/src/main/resources/truck/truckmanagement/MainWindowManager-view.fxml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.CheckBox?>
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="345.0" prefWidth="670.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.MainWindowManager">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="345.0" prefWidth="670.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="truck.truckmanagement.Controller.MainWindowManager">
   <tabs>
     <Tab text="Reisai">
       <content>
@@ -62,7 +52,7 @@
                </children></AnchorPane>
       </content>
     </Tab>
-      <Tab text="Krovinių valdymas">
+      <Tab fx:id="Freights" text="Krovinių valdymas">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -72,10 +62,10 @@
                      </font>
                   </Text>
                   <ListView fx:id="freightList" layoutX="61.0" layoutY="58.0" prefHeight="279.0" prefWidth="196.0" />
-                  <Button layoutX="285.0" layoutY="58.0" mnemonicParsing="false" onAction="#showFreight" prefHeight="34.0" prefWidth="82.0" text="Peržiūrėti" />
+                  <Button fx:id="showFreightBtn" layoutX="285.0" layoutY="58.0" mnemonicParsing="false" onAction="#showFreight" prefHeight="34.0" prefWidth="82.0" text="Peržiūrėti" />
                   <Button layoutX="285.0" layoutY="109.0" mnemonicParsing="false" onAction="#editFreight" prefHeight="32.0" prefWidth="83.0" text="Redaguoti" />
                   <Button layoutX="285.0" layoutY="159.0" mnemonicParsing="false" onAction="#addFreight" prefHeight="30.0" prefWidth="84.0" text="Pridėti" />
-                  <Button layoutX="285.0" layoutY="206.0" mnemonicParsing="false" onAction="#deleteFreight" prefHeight="31.0" prefWidth="85.0" text="Trinti" />
+                  <Button fx:id="deleteBtn" layoutX="285.0" layoutY="206.0" mnemonicParsing="false" onAction="#deleteFreight" prefHeight="31.0" prefWidth="85.0" text="Trinti" />
                </children></AnchorPane>
          </content>
       </Tab>
